--- a/completecourse/widgets/flashcardset/sass/_viewgeneral.scss
+++ b/completecourse/widgets/flashcardset/sass/_viewgeneral.scss
@@ -105,6 +105,7 @@ body {
 		text-align: center;
 		width: 100%;
 		color: #337AB7;
+		z-index: 100;
 	}
 
 	#mastered-checkbox-holder {
